<resources>
    <string name="app_name">Minaret</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="facebook_app_id">555159321543170</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="red">أحمر</string>
    <string name="yellow">أصفر</string>
    <string name="white">أبيض</string>
    <string name="blue">أزرق</string>
    <string name="green">أخضر</string>
    <string name="cyan">سماوي</string>
    <string name="action_settings">Settings</string>
    <string name="about">(ميناريت) المبادرة الإقليمية حول الترابط بين المياه والطاقة والغذاء ، والتي تأتي تحت رعاية رئيسة الجمعية العلمية الملكية الأميرة سمية بنت الحسن، التي تنفّذها الجمعية والمركز الوطني لبحوث الطاقة بالشراكة مع الاتحاد الدولي لحماية الطبيعة وجمعية رواد المستقبل لتمكين أفراد المجتمعات، وتموّلها الوكالة السويدية للتعاون والإنماء الدولي.
</string>
</resources>
